src/components/scss/view-shopping-list.scss
#list-panel .alert {

    padding: 10px;
    margin : 0;
    margin-top: 20px 0 0 0;
}

#list-panel .alert-default{
    border: 1px solid #000;
    clear:left ;
}

#list-panel .alert-default:hover{
    background-color: #dff0d8;
    border: none;
}

.chosen-alert {
    background-color: #dff0d8;
    border: none;
}

.shopping-list i { font-size: 12px; cursor:pointer }
.shopping-list-items { display:none; list-style-type: none }

.panel.panel-default, .panel .panel-heading { padding:0 }

.panel {

    .panel-heading {
        background-color: #fbfbfb;

        h4 { font-weight:300 }

    }
}

#new-item-form {
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
    display : none;
}

#list-name {
    font-weight : 400;
}

.showAddItemForm{
    display: block !important;
}

.hideSomething{
    display: none !important;
}

.form {
    margin-top: 0;
    background: rgba(255,255,255,0);
 
}

@media (min-width: 992px){
    #list-panel .alert {
        margin: 0; margin-bottom:20px
    }
}

